- [+] include/sandix/kern_levels.h		[D] Kernel information levels
- [M] include/sandix/printk.h			[D] pr_xxx(), printk_once(), pr_xxx_once()


Sat Oct 10 CST 2015
- [+] drivers/tty/n_dummy.c


Tue Oct 13 CST 2015
- [+] Diary/10-13-2015				[D] These days i am debugging uncore PMU
-						 >  Wait a couple days, i will be back!


Thu Oct 15 CST 2015
- [+] Diary/10-15-2015


Fri Oct 16 CST 2015
- [+] Diary/10-16-2015
- [+] include/asm-generic/spinlock.h		[D] Error message, need arch-specific file


Sat Oct 17 22:32:55 CST 2015
- [+] kernel/panic.c
- [M] include/sandix/kernel.h			[D] declare panic...


Wed Nov 11 13:29:16 CST 2015
- [+] Diary/11-11-2015				[D] Something about SoC etc.


Fri Nov 13 09:42:52 CST 2015
- [+] Diary/11-13-2015


Mon Nov 16 23:26:53 CST 2015
- [+] Diary/11-16-2015


Tue Nov 17 13:24:49 CST 2015
- [+] Diary/11-17-2015				[D] Life with TOEFL :)


Sun Nov 22 09:37:33 CST 2015
- [+] sound/Makefile				[D] :) Sounds like Shit
- [+] sound/Kconfig
- [+] drivers/tty/tty_dummy.c			[D] A dummy tty driver
- [M] drivers/tty/tty_ldisc.c			[D] Line discipline layer
- [M] drivers/console/console.c			[D] Bind to standard termios
- [M] scripts/Kbuild.include			[D] Add colorful output support
- [M] Makefile					 >  new "make M=..."


Mon Nov 23 10:47:52 CST 2015
- [+] block/Makefile				[D] It's time
- [+] block/Kconfig
- [+] drivers/block/Makefile
- [+] drivers/block/Kconfig
- [+] drivers/char/Makefile
- [+] drivers/char/Kconfig
- [M] Makefile					[D] Colorful "make help"
- [M] arch/x86/boot/tools/build.c		[D] Colorful message


Sat Nov 28 18:14:12 CST 2015
- [+] Diary/11-28-2015


Mon Dec 14 15:20:42 CST 2015
- [M] Makefile					[D] Add a new warning flag, -Wsizeof-array-argument
-						 >  Why? I read the LKML mailing list, there is a
-						 >  mail came from Linus, which mentioned this might be a
-						 >  a big problem! https://lkml.org/lkml/2015/9/3/428

Mon Jan 11 19:57:25 CST 2016
- [M] drivers/tty/tty_io.c
- [M] drivers/tty/tty_ldisc.c