@@ -1,5 +1,5 @@
 /*
- *	Copyright (C) 2015 Yizhou Shan <shanyizhou@ict.ac.cn>
+ *	Copyright (C) 2015-2016 Yizhou Shan <shanyizhou@ict.ac.cn>
  *
  *	This program is free software; you can redistribute it and/or modify
  *	it under the terms of the GNU General Public License as published by
@@ -23,6 +23,7 @@
 #include <sandix/compiler.h>
 #include <sandix/export.h>
 #include <sandix/linkage.h>
+#include <sandix/typecheck.h>
 #include <sandix/types.h>
 #include <sandix/printk.h>
 
